# framesmith

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/framesmith/: __init__.py  compose.py  recipes.py  types.py
src/framesmith/_internal/: __init__.py  address_tokens.py  name_tokens.py  regex_patterns.py  unicode_maps.py  us_states.py
src/framesmith/columns/: names.py  text.py
src/framesmith/combine/: __init__.py  coalesce.py  concat.py  hash_key.py
src/framesmith/filters/: __init__.py  dates.py
src/framesmith/group/: __init__.py  fill.py  mode.py  resolve.py
src/framesmith/schema/: __init__.py  column_names.py
src/framesmith/transforms/: __init__.py  addresses.py  bounds.py  case.py  categorical.py  dates.py  missing.py  names.py  numeric.py  outliers.py  split.py  substitution.py  text.py  unicode.py  whitespace.py
tests/: test_compose.py  test_recipes.py
tests/_internal/: test_address_tokens.py  test_name_tokens.py  test_regex_patterns.py  test_us_states.py
tests/columns/: test_names.py  test_text.py
tests/combine/: test_coalesce.py  test_concat.py  test_hash_key.py
tests/filters/: test_dates.py
tests/group/: test_fill.py  test_mode.py  test_resolve.py
tests/schema/: test_column_names.py
tests/transforms/: test_addresses.py  test_bounds.py  test_case.py  test_categorical.py  test_dates.py  test_missing.py  test_names.py  test_numeric.py  test_outliers.py  test_split.py  test_substitution.py  test_text.py  test_unicode.py  test_whitespace.py
